test/2/type/acc-int.err
test/2/type/acc-int.ploy:2:9-10: type error: accessee is not a struct. accessee type: Int
|   x = 0@1
          ~
test/2/type/acc-int.ploy:2:7-8: note: accessor is here.
|   x = 0@1
        ~
